--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-scroll-into-view": "^1.9.4",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
